samples/_failures_safe/1761639775_e4cfd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff06596d.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_ff06596d.c:153:9: error: ‘lexer_read’ undeclared (first use in this function); did you mean ‘lexer_peek’?
  153 |         lexer_read
      |         ^~~~~~~~~~
      |         lexer_peek
./samples/SAFE/__tmp_ff06596d.c:153:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ff06596d.c:153:19: error: expected ‘;’ at end of input
  153 |         lexer_read
      |                   ^
      |                   ;
./samples/SAFE/__tmp_ff06596d.c:153:9: error: expected declaration or statement at end of input
  153 |         lexer_read
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_ff06596d.c:153:9: error: expected declaration or statement at end of input
